# practical-deep-learning-for-coders

./: .gitignore  README.md  pyproject.toml
.junie/: guidelines.md
notebooks/: README.md
notebooks/kaggle/lesson01/: .gitignore  README.md  is-it-a-bird-creating-a-model-from-your-own-data.ipynb  jupyter-notebook-101.ipynb
notebooks/self/: fastai-intro.ipynb
