[project]
name = "practical-deep-learning-for-coders"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastai>=2.8.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "pandas-stubs==2.3.0.250703",
    "duckduckgo_search>=6.2",
    "pillow>=10.0.0",
    "fastcore>=1.5.21",
    "fastdownload>=0.0.7",
]
